Fix had something to do with /data folder + new version pushed